examples/test/testpolicy2001.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2001
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key3: value24
      key15: value4
      key44: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value8
          key30: value47
          key34: value14
      podSelector:
        matchLabels:
          key10: value47
